Changelog. A lot less detailed than usual, at least for past
	history.
2018/11/23: Reimplement hash function. 	
2018/10/10: new ICTXT argument to prec%init method.
2018/09/04: Modified vector class get_vect method
2018/08/10: Optional arguments in GETROW method. 	
2018/07/30: Improved TRIL/TRIU implementations. 	
2018/06/14: New FCG code. 	
2018/04/23: Change default for CDALL with VL. New GLOBAL argument for
	reductions. 	
2018/04/15: Fixed pargen benchmark programs. Made MOLD mandatory.
2018/01/10: Updated docs.	
2017/12/15: Fixed preconditioner build.
2017/10/31: Updated target install directories.
2017/10/15: Fold genpde into examples for readability.
2017/10/02: Merged CBinding. 	
2017/09/30: Fixes for README, contributors, bug reporting address.
2017/08/09: New optional args to TRIL and TRIU to produce two output
	matrices at once. 	
2017/07/20: Fixes to genpde_impl. Fixed bug in matdist with BLOCK.	
2017/04/28: Further development of CBIND branch.	
2017/04/25: Fix configure for MKL.	
2017/04/10: Makefile fixes.	
2017/04/09: Remove all remaining .F files, and remove configure checks for
	F77. Define version 3.5.0. Fixed INTENT in preconditioners.
2017/04/08: All PREC methods now invoked through preconditioner object. 	
2017/04/05: make ISO_C_BINDING and MOVE_ALLOC mandatory prereq. 
2017/03/20: Changes for GPU codes: added buffers to MAPs, reduce number of
	malloc/free, added new maybe_free_buffers method on vector. 
2017/02/12: New stopping criterion, simplified mat_dist
2017/02/06: Fixes for --enable-long-integers and for RPM build.
2016/07/14: Fix matrix print with renumbering.	
2016/06/18: New thresholds for quicksort	
2016/06/03: New source dir organization	
2016/05/05: Fix fakempi
2016/02/24: Fix init of hash inside cdbldext.
2016/01/06: Default COND to 0.
2015/12/17: Added clean_zeros method to spmat.	
2015/12/14: Fixed mat_dist
2015/12/08: Make LOCX allocatable
2015/12/02: Reworked scatter interfaces.	
2015/10/17: Fix configure for ATLAS packaging.